create new order

--- a/Desktop/Desktop/Desktop.csproj
+++ b/Desktop/Desktop/Desktop.csproj
@@ -186,12 +186,16 @@
     <Compile Include="Controllers\AllItemController.cs" />
     <Compile Include="Controllers\CityController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
+    <Compile Include="Controllers\IOCController.cs" />
+    <Compile Include="Controllers\ItemsController.cs" />
+    <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\QuestionController.cs" />
     <Compile Include="Controllers\SalesPersonController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Items.cs" />
     <Compile Include="Models\Question.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\City.cs" />
@@ -200,7 +204,6 @@
     <Compile Include="Models\DAL\DBservices.cs" />
     <Compile Include="Models\Expert.cs" />
     <Compile Include="Models\IOC.cs" />
-    <Compile Include="Models\Item.cs" />
     <Compile Include="Models\ItemCustomer.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\SalesPerson.cs" />
